turn off bindEvents

--- a/sonar_plotter.html
+++ b/sonar_plotter.html
@@ -51,7 +51,7 @@
         hooks: { draw: [function(plot, canvascontext) { // Add a hook to fill the space between given series
                           fillseries(plot, canvascontext, 'ldata','rdata', false) //
                         }],
-                 bindEvents: [ClickPlot]
+                 //bindEvents: [ClickPlot]
               },
          
         series: {
