Added alpha to heading

--- a/sonar_plotter_reader.html
+++ b/sonar_plotter_reader.html
@@ -463,7 +463,7 @@
 
           // Update seriesPairs
           if (seriesName == 'Heading') {
-          seriesPairs.push([lseriesName, rseriesName, seriesName, false, 'purple']);
+          seriesPairs.push([lseriesName, rseriesName, seriesName, false, 'rgba(168,5,255,0.5)']);
           } else {
             seriesPairs.push([lseriesName, rseriesName, seriesName, false]);
           }
