strength to all series

--- a/sonar_plotter_reader.html
+++ b/sonar_plotter_reader.html
@@ -567,10 +567,10 @@
           //console.log(d);
         
         //addHeading(y, x);
-        addDetection(m, testdata[0][2], parseFloat(testdata[iii][2]), '5');
-        addDetection(m, testdata[0][3], parseFloat(testdata[iii][3]), '5');
-        addDetection(m, testdata[0][4], parseFloat(testdata[iii][4]), '5');
-        addDetection(m, testdata[0][5], parseFloat(testdata[iii][5]), '5');
+        addDetection(m, testdata[0][2], parseFloat(testdata[iii][2]), testdata[iii][7]);
+        addDetection(m, testdata[0][3], parseFloat(testdata[iii][3]), testdata[iii][7]);
+        addDetection(m, testdata[0][4], parseFloat(testdata[iii][4]), testdata[iii][7]);
+        addDetection(m, testdata[0][5], parseFloat(testdata[iii][5]), testdata[iii][7]);
         addDetection(m, testdata[0][6], parseFloat(testdata[iii][6]), testdata[iii][7]);
         addHeading(m, parseFloat(testdata[iii][1]));
         } else {
