--- a/sonar_plotter_reader.html
+++ b/sonar_plotter_reader.html
@@ -20,8 +20,7 @@
 
 </head>
 <body>
-
-	<div id="container"></div>
+  <div id="container"></div>
 
   <div id="controlpanel">
   
@@ -36,8 +35,7 @@
     <div id="selectedSeries" style="margin-top:100px;display:block;width:200px;height:30px;border-radius:5px;background:lightgrey;color:white;font-family:sans-serif;font-size:22px;padding:30 0 30 100;"></div>
 
 </div>
-
-	<script type="text/javascript">
+<script type="text/javascript">
 
   var testdata = [];
   var iii = 0;
@@ -61,15 +59,13 @@
         iii++;
         
         if (iii<157) {
-          var d = new Date("January 1, 1970 " +testdata[iii][0]);
-          var m = d.getTime(); 
         
-        addDetection(m, testdata[0][2], parseFloat(testdata[iii][2]), testdata[iii][7]);
-        addDetection(m, testdata[0][3], parseFloat(testdata[iii][3]), testdata[iii][7]);
-        addDetection(m, testdata[0][4], parseFloat(testdata[iii][4]), testdata[iii][7]);
-        addDetection(m, testdata[0][5], parseFloat(testdata[iii][5]), testdata[iii][7]);
-        addDetection(m, testdata[0][6], parseFloat(testdata[iii][6]), testdata[iii][7]);
-        addHeading(m, parseFloat(testdata[iii][1]));
+        addDetection(testdata[iii][0], testdata[0][2], parseFloat(testdata[iii][2]), testdata[iii][7]);
+        addDetection(testdata[iii][0], testdata[0][3], parseFloat(testdata[iii][3]), testdata[iii][7]);
+        addDetection(testdata[iii][0], testdata[0][4], parseFloat(testdata[iii][4]), testdata[iii][7]);
+        addDetection(testdata[iii][0], testdata[0][5], parseFloat(testdata[iii][5]), testdata[iii][7]);
+        addDetection(testdata[iii][0], testdata[0][6], parseFloat(testdata[iii][6]), testdata[iii][7]);
+        addHeading(testdata[iii][0], parseFloat(testdata[iii][1]));
         } else {
           alert('end of data')
         }
