--- a/sonar_plotter_reader.html
+++ b/sonar_plotter_reader.html
@@ -48,7 +48,7 @@
         $('#clearButton').on('click', function() {
           $('#selectedSeries').html('');
 
-          clear();
+          clearPlotter();
 
         });
         
