Format ticks, basic zoom

--- a/sonar_plotter_reader_jqplot.html
+++ b/sonar_plotter_reader_jqplot.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="js/jquery.csv-0.71.min.js"></script>
   <script type="text/javascript" src="js/jquery.jqplot.js"></script>
+  <script type="text/javascript" src="plugins/jqplot.cursor.min.js"></script>
   <script type="text/javascript" language="javascript" src="plugins/jqplot.dateAxisRenderer.js"></script>
   <link href="css/jquery.jqplot.css" rel="stylesheet" type="text/css">
 
